✨ Added new tests for GeneratePrintedOutput() in OutputService